2024-Oct-10 Struan Robertson

		* ConditionsManager.h/.cpp, CollisionOperator.cpp, Analysis.h: Addition of
		code to write out second order rate coeffcients to XML.
		
		* MesmerILT.cpp: Fix for pre-exponetial units bug.

2024-Oct-06 Struan Robertson

		* CollisionOperator.cpp, gWellRadiationTransition.h/.cpp: Addition of 
		methods to calculate attentuated radiation temperature.

2024-Jul-07 Struan Robertson

		* unitConversion.h/.cpp, MesmerILT.cpp: Fix for pre-exponetial units bug.

2024-Apr-07 Struan Robertson

		* gWellRadiationTransition.cpp, MesmerEnv.h/.cpp, ConditionsManager.h/.cpp,
		System.cpp: Addition of radiation attenuation factor.

2024-Mar-25 Struan Robertson

		* MultiHinderedRotorPotential.cpp: Cross terms added.

2024-Mar-17 Struan Robertson

		* gDensityOfStates.cpp: Altered .xml output statement as to limit conversion
		to scientific format as this cannot be processed by XSLT.

2024-Mar-08 Struan Robertson

		* CollisionOperator.cpp: Effective radiation temperature, norm update.

		* NSISScriptToCreateInstaller.nsi: Windows installer altered to use 64 bit 
		MESMER build.

		* Mesmer.sln: Mesmer VS solution file.

2023-Dec-29 Struan Robertson

		*  MultiHinderedRotorPotential.cpp: Further updates to coupled hindered rotor
		potential.

2023-Dec-28 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Improved 
		control and reporting of coupled hindered rotor potential.

2023-Dec-28 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Update of
		classical coupled rotors class to invoke coupled hindered rotor potential.

2023-Dec-23 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp: Extension of coupled hindered rotor 
		potential to include basis product terms.

2023-Dec-23 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Initial 
		implementation of coupled hindered rotor potential.

2023-Dec-18 Struan Robertson
